# Lazuli-Project

./: README.md
lazuli-central/: CMakeLists.txt  Kconfig  README.md  prj.conf
lazuli-central/src/: main.c
lazuli-central/src/web_resources/: index.html
lazuli-peripheral/: README.md  prj.conf
lazuli-peripheral/boards/: esp32_devkitc_wroom_procpu.overlay
lazuli-peripheral/src/: main.c
